# task-scheduler

./: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile.base  README.md  Responsibilites.md  Rocket.toml  docker-compose.dev.yml  docker-compose.yml  start_local.sh  stop_local.sh
queue_populator/: Cargo.toml  Dockerfile
queue_populator/src/: config.rs  error.rs  job_processor.rs  lib.rs  main.rs
scheduler_core/: Cargo.toml
scheduler_core/migrations/: 001_initial_tables.sql
scheduler_core/src/: api_models.rs  cache.rs  config.rs  db.rs  error.rs  init.rs  lib.rs  models.rs  redis.rs  task.rs
scheduler_core/src/cache/: mod.rs  redis.rs
scheduler_core/src/db/: mod.rs  postgres.rs
scheduler_core/src/service/: job_service.rs  mod.rs
scheduler_core/src/utils/: json.rs  mod.rs
task_executor/: Cargo.toml  Dockerfile
task_executor/src/: error.rs  executor.rs  lib.rs  main.rs  process.rs  state.rs
task_failure_watcher/: Cargo.toml  Dockerfile
task_failure_watcher/src/: alerting.rs  cleanup.rs  lib.rs  main.rs  watcher.rs
task_recurrence_manager/: Cargo.toml  Dockerfile
task_recurrence_manager/src/: error.rs  lib.rs  main.rs  manager.rs  schedule.rs
task_scheduler_api/: Cargo.toml  Dockerfile  Rocket.toml
task_scheduler_api/config/: application.yaml  base.yaml  local.yaml  production.yaml
task_scheduler_api/src/: config.rs  error.rs  lib.rs  main.rs
task_scheduler_api/src/controller/: job_controller.rs  job_handler.rs  mod.rs  recurring_job_handler.rs
task_scheduler_api/src/guard/: api_key.rs  basic_auth.rs  jwt_auth.rs  mod.rs
task_scheduler_api/src/handlers/: jobs.rs  mod.rs  ping.rs  templates.rs
task_scheduler_api/src/middleware/: logging.rs
task_scheduler_api/src/model/: auth.rs  job.rs  recurring_job.rs
task_scheduler_api/src/routes/: health.rs  jobs.rs  mod.rs  templates.rs
task_scheduler_api/src/security/: jwt.rs
task_scheduler_api/src/service/: job_service.rs
task_scheduler_migrations/: Cargo.toml  cleanup.sql  migrate.sh
task_scheduler_migrations/migrations/: 001_consolidated_schema.sql  001_initial_tables.sql  002_add_parent_job_id.sql  003_cron_partitioning.sql  20240324_add_schedule_type.sql  20240324_partitioned_jobs.sql  20240424_add_job_types_and_tracking.sql  20240425_add_priority.sql  20240425_fix_job_status_enum.sql  20240426_add_job_type.sql  20240426_fix_job_status_type.sql  20240426_fix_partitioning.sql
task_scheduler_migrations/src/: lib.rs
task_scheduler_monolith/: Cargo.toml
task_scheduler_monolith/src/: api.rs  executor.rs  failure_watcher.rs  main.rs  queue_populator.rs  recurrence_manager.rs
