[workspace]
resolver = "2" # Use the latest resolver for better dependency management
members = [
    "scheduler_core",          # Shared logic (DB models, traits, utils)
    "task_scheduler_api",      # API Service (Binary Crate)
    "task_executor",           # Worker Service (Binary Crate)
    "task_failure_watcher",    # Watchdog Service (Binary Crate)
    "task_recurrence_manager", # Recurrence Manager (Binary Crate)
    "queue_populator",         # Queue Populator Service (Binary Crate)
]

# Optional: Define common dependencies or profiles for all members
# This helps maintain consistency across your services.
# [workspace.dependencies]
# tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "json",
] }
# redis = { version = "0.25", features = ["tokio-comp"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# config = "0.14"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# chrono = { version = "0.4", features = ["serde"] }
# uuid = { version = "1", features = ["v4", "serde"] }
# thiserror = "1.0" # Useful for custom error types in scheduler_core

# Example Release Profile Optimization (applied when building with --release)
[profile.release]
lto = true        # Link Time Optimization for potentially smaller/faster binaries
codegen-units = 1 # Maximize optimization potential (slower compile)
panic = 'abort'   # Smaller binary size, no stack unwinding on panic
strip = true      # Remove debug symbols from the final binary
