[workspace]
resolver = "2" # Use the latest resolver for better dependency management
members = [
    "scheduler_core",          # Shared logic (DB models, traits, utils)
    "task_scheduler_api",      # API Service (Binary Crate)
    "task_executor",           # Worker Service (Binary Crate)
    "task_failure_watcher",    # Watchdog Service (Binary Crate)
    "task_recurrence_manager", # Recurrence Manager (Binary Crate)
    "queue_populator",         # Queue Populator Service (Binary Crate)
    "task_scheduler_monolith", # Unified Binary (Binary Crate)
]

# Example Release Profile Optimization (applied when building with --release)
[profile.release]
lto = true        # Link Time Optimization for potentially smaller/faster binaries
codegen-units = 1 # Maximize optimization potential (slower compile)
panic = 'abort'   # Smaller binary size, no stack unwinding on panic
strip = true      # Remove debug symbols from the final binary
