[package]
name = "queue_populator"
version = "0.1.0"
edition = "2021"

[dependencies]
scheduler_core = { path = "../scheduler_core" }
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
valkey = "0.0.0-alpha5"
async-trait = "0.1"
