[package]
name = "queue_populator"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Queue populator service for the task scheduler system"

[lib]
name = "queue_populator"
path = "src/lib.rs"

[[bin]]
name = "queue_populator"
path = "src/main.rs"

[dependencies]
scheduler_core = { path = "../scheduler_core" }
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
valkey = "0.0.0-alpha5"
async-trait = "0.1"
thiserror = "1.0"
config = "0.13"
