[package]
name = "scheduler_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.29.5", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
cron = "0.15"
