[package]
name = "scheduler_core"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "json",
] }
redis = { version = "0.29.5", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
config = "0.15.11"
dotenv = "0.15"
async-trait = "0.1"
cron-parser = "0.10.0"
