[package]
name = "scheduler_core"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "json",
] }
redis = { version = "0.29.5", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
config = "0.15.11"
dotenv = "0.15"
async-trait = "0.1"
cron-parser = "0.10.0"
anyhow = "1.0"
valkey = "0.0.0-alpha5"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.7", features = ["v4"] }
