[package]
name = "task_executor"
version = "0.1.0"
edition = "2024"

[dependencies]
# Depend on the shared core library
scheduler_core = { path = "../scheduler_core" }

# Add dependencies specific to the executor
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# You'll likely need sqlx and redis directly here too, even if defined in core,
# unless core exposes all necessary functions. Often better to depend directly.
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "json"] }
redis = { version = "0.25", features = ["tokio-comp"] }
# Add retry libraries (e.g., backoff) if needed