[package]
name = "task_executor"
version = "0.1.0"
edition = "2024"

[dependencies]
# Depend on the shared core library
scheduler_core = { path = "../scheduler_core" }

# Add dependencies specific to the executor
tokio = { version = "1.44.2", features = ["full", "sync"] }
chrono = "0.4.40"
tracing = "0.1.41"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.7", features = ["v4"] }
futures = "0.3"
async-trait = "0.1"
config = "0.15.11"
# You'll likely need sqlx and redis directly here too, even if defined in core,
# unless core exposes all necessary functions. Often better to depend directly.
sqlx = { version = "0.8.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "uuid",
  "json",
] }
redis = { version = "0.29.5", features = ["tokio-comp"] }
sys-info = "0.9"
derive_more = "0.99"
# Add retry libraries (e.g., backoff) if needed
