[package]
name = "task_failure_watcher"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Failure watcher service for the task scheduler system"

[lib]
name = "task_failure_watcher"
path = "src/lib.rs"

[[bin]]
name = "task_failure_watcher"
path = "src/main.rs"

[dependencies]
scheduler_core = { path = "../scheduler_core" }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "2.0.12"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.11"
async-trait = "0.1"
