[package]
name = "task_recurrence_manager"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Recurrence manager service for the task scheduler system"

[lib]
name = "task_recurrence_manager"
path = "src/lib.rs"

[[bin]]
name = "task_recurrence_manager"
path = "src/main.rs"

[dependencies]
scheduler_core = { path = "../scheduler_core" }
tokio = { version = "1.36", features = ["full"] }
chrono = "0.4"
chrono-tz = "0.10.3"
cron-parser = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde_json = "1.0"
thiserror = "2.0.12"
uuid = { version = "1.7", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
