[package]
name = "task_scheduler_api"
version = "0.1.0"
edition = "2024"

[dependencies]
scheduler_core = { path = "../scheduler_core" }
rocket = { version = "0.5.1", features = ["secrets", "json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"] }
rocket_dyn_templates = { version = "0.2.0" }
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
# Additional dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.11"
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.12"
log = "0.4"
env_logger = "0.11.8"
