[package]
name = "task_scheduler_api"
version = "0.1.0"
edition = "2024"

[dependencies]
scheduler_core = { path = "../scheduler_core" }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.14.1"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
log = "0.4.22"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "json",
] }
once_cell = "1.20.2"
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx"] }
rocket_oauth2 = "=0.5.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
thiserror = "1.0.56"
tokio = { version = "1.44.2", features = ["full"] }